feat: Update app shortcut icon and rename it

--- a/immich/src/main/res/xml/shortcuts.xml
+++ b/immich/src/main/res/xml/shortcuts.xml
@@ -3,7 +3,7 @@
     <shortcut
         android:shortcutId="immich_favorite"
         android:enabled="true"
-        android:icon="@android:drawable/star_big_on"
+        android:icon="@drawable/fav"
         android:shortcutShortLabel="@string/immich_shortcut_favorite_label"
         android:shortcutLongLabel="@string/immich_shortcut_favorite_label">
         <intent
